[B]2.4.1[/B]
• Add support for albums back thumbs (file must be placed in album folder and named 'thumbback.jpg')
• Fix issue with Appearance for Personal Widgets
• Minor fixes

[B]2.4.0[/B]
/!\ Reboot Kodi and 'Reset main menu and power menu settings' in skin settings after installation of this version /!\
• Add support for Skin Shortcuts template to avoid personalized widgets reloading
• Add possibility to define sort method and sort direction for personalized widgets
• Add rating on video osd info
• Minor changes
• Minor fixes

[B]2.3.2[/B]
• Add VP9 video codec icon
• Add rewind and forward OSD buttons for PVR TimeShift
• Fix on PVR/Radio widgets
• Fix duration flag icon with Global Search
• Many fixes for Arial font
• Minor changes
• Minor fixes

[B]2.3.1[/B]
• Add Next Up popup for Live TV
• Add albums count on artists dialog info
• Add possibility to disable 'Settings' shortcut widget
• Add PVR overlay when switching channels
• Fix artists/albums plots on music dialog info
• Fix on PVR
• Fix caterories labels for personalized widgets

[B]2.3.0[/B]
• Add parental control to protect home menu items and widgets with password
• Add support for German language (Thanks to rainman74)
• Fix CDArts position on Global Search screen
• Fix esthetic appearance
• Minor fixes
• Minor changes

[B]2.2.9[/B]
• Add support for extendedinfo youtube list
• Add shortcut for movies set info to context menu
• Add shortcut for extended info to context menu
• Fix lyrics on music visualisation
• Fix aspect ratio on tv shows widgets
• Fix channel osd recording indicator visibility
• Fix esthetic appearance
• Minor fixes
• Minor changes

[B]2.2.8[/B]
• Add info dialog for movies sets
• Fix playlists editor
• Minor fixes

[B]2.2.7[/B]
• Changes for Kodi 18
• Add possibility to disable colored outline for CDArts
• Add possibility to disable animated lyrics for classic lyrics
• Fix disc overlay for some CDArts
• Fix extended info window for some resolutions
• Fix playlists editor