@@ -1,5 +1,6 @@
 [B]2.4.1[/B]
 • Add support for albums back thumbs (file must be placed in album folder and named 'thumbback.jpg')
+• Add possibility to change rating text color
 • Fix issue with Appearance for Personal Widgets
 • Minor fixes
 
